Fix spacing on profile cards

--- a/frontend/scripts/react-components/shared/animated-card/animated-card.scss
+++ b/frontend/scripts/react-components/shared/animated-card/animated-card.scss
@@ -82,4 +82,14 @@ $card-min-height: 200px;
       }
     }
   }
+  .cards-details-text-container {
+    // Only for google translate. TODO: Find a better solution
+    font {
+      margin: 0 0.1em;
+
+      &:first-child {
+        margin-left: 0;
+      }
+    }
+  }
 }
